--- a/smlm_dl/examples/FitMultiPsf.ipynb
+++ b/smlm_dl/examples/FitMultiPsf.ipynb
@@ -1,12 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0a26da55-a932-4648-8ec4-01951338bf76",
+   "cell_type": "markdown",
+   "id": "9d4a3605-26c4-4955-87b6-6d8c95be0a7d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Fitting multiple PSFs in 2D\n",
+    "\n",
+    "* Simulated PSFs based on 2D Gaussian function with mixed Poisson-Gaussian noise\n",
+    "* U-Net is used to split the PSFs into individual channels\n",
+    "* Output from the U-Net is processed to extract x, y, amplitude, background, Gaussian sigma\n",
+    "* The parameters are rendered back into images based on 2D Gaussian function"
+   ]
   },
   {
    "cell_type": "code",
@@ -126,14 +131,12 @@
     "                    },\n",
     "}\n",
     "\n",
-    "# training_data = dataset.FourierOpticsPSFDataset(**settings)\n",
     "training_data = dataset.Gaussian2DPSFDataset(**settings)\n",
     "training_data.to('cuda')\n",
     "dataset.inspect_images(training_data)\n",
     "train_dataloader = DataLoader(training_data, batch_size=2048, shuffle=True)\n",
     "\n",
     "settings['length'] = (512, 4)\n",
-    "# validation_data = dataset.FourierOpticsPSFDataset(**settings)\n",
     "validation_data = dataset.Gaussian2DPSFDataset(**settings)\n",
     "validation_data.to('cuda')\n",
     "dataset.inspect_images(validation_data)\n",
